# sucker_project

./: .clang-format  .gitignore  CMakeLists.txt  funcLib.cpp  main.cpp
cmake/: FindRSSDK2.cmake  ProjectMinDepVersions.cmake
include/device/: funcLib.hpp
src/: CMakeLists.txt  funcLib.cpp  main.cpp
test/: test.cpp
tools/: CMakeLists.txt
